Fix button with on mobile

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -5,7 +5,7 @@
   }
   
   .button{
-    min-width: 14rem;
+    width: 14rem;
     margin-right: 1rem;
   }
   
